--- a/index.html
+++ b/index.html
@@ -346,12 +346,12 @@
              /assets/gallery6.jpg
       -->
       <div class="gallery-grid" role="list">
-        <figure><img src="/assets/gallery1.jpg" alt="Gallery 1 — interior clean"><figcaption class="caption">No caption yet</figcaption></figure>
-        <figure><img src="/assets/gallery2.jpg" alt="Gallery 2 — cleaned kitchen"><figcaption class="caption">No caption yet</figcaption></figure>
-        <figure><img src="/assets/gallery3.jpg" alt="Gallery 3 — upholstery cleaning"><figcaption class="caption">No caption yet</figcaption></figure>
-        <figure><img src="/assets/gallery4.jpg" alt="Gallery 4 — after clean"><figcaption class="caption">No caption yet</figcaption></figure>
-        <figure><img src="/assets/gallery5.jpg" alt="Gallery 5 — carpet clean"><figcaption class="caption">No caption yet</figcaption></figure>
-        <figure><img src="/assets/gallery6.jpg" alt="Gallery 6 — oven clean"><figcaption class="caption">No caption yet</figcaption></figure>
+        <figure><img src="/assets/gallery1.jpg" alt="Bee Cleaning services gallery — interior clean"><figcaption class="caption">No caption yet</figcaption></figure>
+        <figure><img src="/assets/gallery2.jpg" alt="Bee Cleaning services gallery — cleaned kitchen"><figcaption class="caption">No caption yet</figcaption></figure>
+        <figure><img src="/assets/gallery3.jpg" alt="Bee Cleaning services gallery — upholstery cleaning"><figcaption class="caption">No caption yet</figcaption></figure>
+        <figure><img src="/assets/gallery4.jpg" alt="Bee Cleaning services gallery — after clean"><figcaption class="caption">No caption yet</figcaption></figure>
+        <figure><img src="/assets/gallery5.jpg" alt="Bee Cleaning services gallery — carpet clean"><figcaption class="caption">No caption yet</figcaption></figure>
+        <figure><img src="/assets/gallery6.jpg" alt="Bee Cleaning services gallery — oven clean"><figcaption class="caption">No caption yet</figcaption></figure>
       </div>
     </section>
 
