Remove leading slashes from asset image paths

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     /* hero background image: replace /assets/hero.jpg */
     .hero::before{
       content:"";
-      position:absolute;inset:0;background-image:url('/assets/hero.jpg');background-size:cover;background-position:center;
+      position:absolute;inset:0;background-image:url('assets/hero.jpg');background-size:cover;background-position:center;
       filter:contrast(0.9) saturate(1) brightness(0.35);transform:scale(1.02);
       z-index:0;
     }
@@ -346,12 +346,12 @@
              /assets/gallery6.jpg
       -->
       <div class="gallery-grid" role="list">
-        <figure><img src="/assets/gallery1.jpg" alt="Bee Cleaning services gallery — interior clean"><figcaption class="caption">No caption yet</figcaption></figure>
-        <figure><img src="/assets/gallery2.jpg" alt="Bee Cleaning services gallery — cleaned kitchen"><figcaption class="caption">No caption yet</figcaption></figure>
-        <figure><img src="/assets/gallery3.jpg" alt="Bee Cleaning services gallery — upholstery cleaning"><figcaption class="caption">No caption yet</figcaption></figure>
-        <figure><img src="/assets/gallery4.jpg" alt="Bee Cleaning services gallery — after clean"><figcaption class="caption">No caption yet</figcaption></figure>
-        <figure><img src="/assets/gallery5.jpg" alt="Bee Cleaning services gallery — carpet clean"><figcaption class="caption">No caption yet</figcaption></figure>
-        <figure><img src="/assets/gallery6.jpg" alt="Bee Cleaning services gallery — oven clean"><figcaption class="caption">No caption yet</figcaption></figure>
+        <figure><img src="assets/gallery1.jpg" alt="Bee Cleaning services gallery — interior clean"><figcaption class="caption">No caption yet</figcaption></figure>
+        <figure><img src="assets/gallery2.jpg" alt="Bee Cleaning services gallery — cleaned kitchen"><figcaption class="caption">No caption yet</figcaption></figure>
+        <figure><img src="assets/gallery3.jpg" alt="Bee Cleaning services gallery — upholstery cleaning"><figcaption class="caption">No caption yet</figcaption></figure>
+        <figure><img src="assets/gallery4.jpg" alt="Bee Cleaning services gallery — after clean"><figcaption class="caption">No caption yet</figcaption></figure>
+        <figure><img src="assets/gallery5.jpg" alt="Bee Cleaning services gallery — carpet clean"><figcaption class="caption">No caption yet</figcaption></figure>
+        <figure><img src="assets/gallery6.jpg" alt="Bee Cleaning services gallery — oven clean"><figcaption class="caption">No caption yet</figcaption></figure>
       </div>
     </section>
 
